--- a/frontend/src/templates/header.html
+++ b/frontend/src/templates/header.html
@@ -11,10 +11,70 @@
 </head>
 <body>
 <!-- inject: ./../../dist/assets/svg/icons.svg-->
-<div class="container">
-    <h1>Basis</h1>
-    <a href="basic.html" class="button">Basis</a>
+<h1>Header</h1>
+<div class="example">
+    <header class="header">
+        <div class="container">
+            <div class="header-inner">
+                <div class="header-logo">
+                    HEIDENHEIM LOGo
+                </div>
+                <div class="header-toggle" data-toggle="header-search header-toggle--search" id="header-toggle--search" data-toggler=".header-toggle--active">
+                    <svg class="svg svg--icon">
+                        <use xlink:href="#search"/>
+                    </svg>
+                    <svg class="svg svg--close">
+                        <use xlink:href="#close"/>
+                    </svg>
+                </div>
+                <div class="header-toggle" data-toggle="header-menu header-toggle--menu" id="header-toggle--menu" data-toggler=".header-toggle--active">
+                    <svg class="svg svg--icon">
+                        <use xlink:href="#menu"/>
+                    </svg>
+                    <svg class="svg svg--close">
+                        <use xlink:href="#close"/>
+                    </svg>
+                </div>
+                <div class="header-menu" id="header-menu" data-toggler=".header-menu--active">
+                    <ul class="header-navigation">
+                        <li class="header-navigation-item">
+                            <a href="#">Einkaufen</a>
+                        </li>
+                        <li class="header-navigation-item">
+                            <a href="#">Dienstleistungen</a>
+                        </li>
+                        <li class="header-navigation-item">
+                            <a href="#">Gastronomie</a>
+                        </li>
+                        <li class="header-navigation-item">
+                            <a href="#">Anfahrt & Parken</a>
+                        </li>
+                        <li class="header-navigation-item">
+                            <a href="#">Veranstaltungen</a>
+                        </li>
+                        <li class="header-navigation-item">
+                            <a href="#">Kontakt</a>
+                        </li>
+                        <li class="header-navigation-item">
+                            <a href="#">Impressum</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header-search" id="header-search" data-toggler=".header-search--active">
+                    Suche XXX
+                </div>
+            </div>
+        </div>
+
+    </header>
 </div>
+Mehr content
+
+<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.1/js/foundation.min.js"></script>
+<script type="application/javascript">
+    $(document).foundation();
+</script>
 </body>
 </html>
 
