--- a/frontend/src/templates/header.html
+++ b/frontend/src/templates/header.html
@@ -61,7 +61,12 @@
                     </ul>
                 </div>
                 <div class="header-search" id="header-search" data-toggler=".header-search--active">
-                    Suche XXX
+                    <span class="header-search-title">
+                        Was suchen Sie in Heidenheim?
+                    </span>
+                    <div class="header-search-form">
+                        <input type="text" name="q" placeholder="Suchbegriff"/>
+                    </div>
                 </div>
             </div>
         </div>
