--- a/frontend/src/scss/sections/_common.scss
+++ b/frontend/src/scss/sections/_common.scss
@@ -1,3 +1,4 @@
 @import '../components/common/base';
 @import '../components/common/grid';
 @import '../components/common/header';
+@import '../components/common/hero';
