--- a/frontend/src/templates/header.html
+++ b/frontend/src/templates/header.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="header-inner">
                 <div class="header-logo">
-                    HEIDENHEIM LOGo
+                    HEIDENHEIM LOGO
                 </div>
                 <div class="header-toggle" data-toggle="header-search header-toggle--search" id="header-toggle--search" data-toggler=".header-toggle--active">
                     <svg class="svg svg--icon">
@@ -43,7 +43,7 @@
                         <li class="header-navigation-item">
                             <a href="#">Dienstleistungen</a>
                         </li>
-                        <li class="header-navigation-item">
+                        <li class="header-navigation-item header-navigation-item--active">
                             <a href="#">Gastronomie</a>
                         </li>
                         <li class="header-navigation-item">
@@ -52,10 +52,10 @@
                         <li class="header-navigation-item">
                             <a href="#">Veranstaltungen</a>
                         </li>
-                        <li class="header-navigation-item">
+                        <li class="header-navigation-item  header-navigation-item--hidden">
                             <a href="#">Kontakt</a>
                         </li>
-                        <li class="header-navigation-item">
+                        <li class="header-navigation-item header-navigation-item--hidden">
                             <a href="#">Impressum</a>
                         </li>
                     </ul>
