--- a/frontend/src/templates/hero.html
+++ b/frontend/src/templates/hero.html
@@ -11,11 +11,18 @@
 </head>
 <body>
 <!-- inject: ./../../dist/assets/svg/icons.svg-->
-<div class="container">
-    <h1>Basis</h1>
-    <a href="basic.html" class="button">Basis</a>
-    <a href="header.html" class="button">Header</a>
-    <a href="hero.html" class="button">Hero</a>
+<h1>Hero</h1>
+<div class="example">
+    <div class="hero" style="background-image: url('https://i.imgur.com/r3UtcD3.jpg');">
+        <div class="hero-inner container">
+                <div class="hero-headline">
+                    <h1>Einkaufen</h1>
+                    <p>Wenn Sie gern einen entspannten
+                        Einkaufsbummel unternehmen,
+                        sind Sie in Heidenheim goldrichtig.</p>
+                </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
