--- a/frontend/src/scss/sections/_common.scss
+++ b/frontend/src/scss/sections/_common.scss
@@ -2,3 +2,4 @@
 @import '../components/common/grid';
 @import '../components/common/header';
 @import '../components/common/hero';
+@import '../components/common/tabs';
