--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -16,6 +16,7 @@
     <a href="basic.html" class="button">Basis</a>
     <a href="header.html" class="button">Header</a>
     <a href="hero.html" class="button">Hero</a>
+    <a href="tabs.html" class="button">Tabs</a>
 </div>
 </body>
 </html>
