--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -17,6 +17,8 @@
     <a href="header.html" class="button">Header</a>
     <a href="hero.html" class="button">Hero</a>
     <a href="tabs.html" class="button">Tabs</a>
+    <h2>Layouts</h2>
+    <a href="layout-example.html" class="button">Gesamt Beispiel</a>
 </div>
 </body>
 </html>
