--- a/frontend/src/scss/components/common/_header.scss
+++ b/frontend/src/scss/components/common/_header.scss
@@ -7,6 +7,9 @@ $header-height-mobile: 48px;
   background-color: $white;
   position: relative;
   width: 100%;
+  @include breakpoint(large) {
+    padding-top: $spacing;
+  }
   &-inner {
     display: flex;
     flex-wrap: wrap;
@@ -96,6 +99,7 @@ $header-height-mobile: 48px;
         left: $spacing*2;
         right: $spacing*2;
         width: auto;
+        min-height: 300px;
         background-color: rgba($medium-gray,.75);
         padding: $spacing;
         padding-left: $spacing*4;
