--- a/frontend/src/scss/sections/_common.scss
+++ b/frontend/src/scss/sections/_common.scss
@@ -1,5 +1,6 @@
 @import '../components/common/base';
 @import '../components/common/grid';
 @import '../components/common/header';
+@import '../components/common/footer';
 @import '../components/common/hero';
 @import '../components/common/tabs';
