--- a/frontend/src/templates/footer.html
+++ b/frontend/src/templates/footer.html
@@ -11,15 +11,20 @@
 </head>
 <body>
 <!-- inject: ./../../dist/assets/svg/icons.svg-->
-<div class="container">
-    <h1>Basis</h1>
-    <a href="basic.html" class="button">Basis</a>
-    <a href="header.html" class="button">Header</a>
-    <a href="hero.html" class="button">Hero</a>
-    <a href="tabs.html" class="button">Tabs</a>
-    <a href="footer.html" class="button">Footer</a>
-    <h2>Layouts</h2>
-    <a href="layout-example.html" class="button">Gesamt Beispiel</a>
+<h1>Footer</h1>
+<div class="example">
+    <footer class="footer">
+        <div class="container">
+            <ul class="footer-inner">
+                <li class="footer-inner-item">
+                    <a href="#">Kontakt</a>
+                </li>
+                <li class="footer-inner-item">
+                    <a href="#">Impressum</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
