--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -18,6 +18,8 @@
     <a href="hero.html" class="button">Hero</a>
     <a href="tabs.html" class="button">Tabs</a>
     <a href="footer.html" class="button">Footer</a>
+    <h2>Special elements</h2>
+    <a href="home-columns.html" class="button">Columns Home</a>
     <h2>Layouts</h2>
     <a href="layout-example.html" class="button">Gesamt Beispiel</a>
 </div>
