--- a/frontend/src/templates/home-columns.html
+++ b/frontend/src/templates/home-columns.html
@@ -14,10 +14,10 @@
 <h1>Columns homepage</h1>
 <div class="example">
     <div class="colhome">
-        <div class="container container--medium">
+        <div class="container container--medium" data-equalizer data-equalize-on="medium">
             <div class="colhome-col">
                 <div class="colhome-inner">
-                    <div class="colhome-inner-meta">
+                    <div class="colhome-inner-meta" data-equalizer-watch>
                         <h2>Save the date</h2>
                         <p>Something</p>
                     </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="colhome-col">
                 <div class="colhome-inner">
-                    <div class="colhome-inner-meta">
+                    <div class="colhome-inner-meta" data-equalizer-watch>
                         <h2>Save the date</h2>
                         <p>Something</p>
                     </div>
@@ -39,8 +39,10 @@
             </div>
             <div class="colhome-col">
                 <div class="colhome-inner">
-                    <div class="colhome-inner-meta">
+                    <div class="colhome-inner-meta" data-equalizer-watch>
                         <h2>Save the date</h2>
+                        <p>Something</p>
+                        <p>Something</p>
                         <p>Something</p>
                     </div>
                     <div class="colhome-inner-image">
