--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -20,6 +20,7 @@
     <a href="footer.html" class="button">Footer</a>
     <h2>Special elements</h2>
     <a href="home-columns.html" class="button">Columns Home</a>
+    <a href="material-groups.html" class="button">Material groups</a>
     <h2>Layouts</h2>
     <a href="layout-example.html" class="button">Gesamt Beispiel</a>
 </div>
