--- a/frontend/src/scss/sections/_special.scss
+++ b/frontend/src/scss/sections/_special.scss
@@ -1,2 +1,3 @@
 @import '../components/special/columns-home';
 @import '../components/special/material-groups';
+@import '../components/special/entries';
