--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -21,6 +21,7 @@
     <h2>Special elements</h2>
     <a href="home-columns.html" class="button">Columns Home</a>
     <a href="material-groups.html" class="button">Material groups</a>
+    <a href="entries-list.html" class="button">Entries (list)</a>
     <h2>Layouts</h2>
     <a href="layout-example.html" class="button">Gesamt Beispiel</a>
 </div>
