--- a/frontend/src/scss/sections/_special.scss
+++ b/frontend/src/scss/sections/_special.scss
@@ -1,3 +1,4 @@
 @import '../components/special/columns-home';
 @import '../components/special/material-groups';
 @import '../components/special/entries';
+@import '../components/special/events';
