--- a/frontend/src/templates/events.html
+++ b/frontend/src/templates/events.html
@@ -11,44 +11,61 @@
 </head>
 <body>
 <!-- inject: ./../../dist/assets/svg/icons.svg-->
-<h1>Columns homepage</h1>
+<h1>Event list</h1>
 <div class="example">
-    <div class="colhome">
-        <div class="container container--medium" data-equalizer data-equalize-on="medium">
-            <div class="colhome-col">
-                <div class="colhome-inner">
-                    <div class="colhome-inner-meta" data-equalizer-watch>
-                        <h2>Save the date</h2>
-                        <p>Something</p>
+    <div class="events">
+        <div class="container container--medium">
+            <div class="events-item">
+                <a href="#" class="event">
+                    <div class="event-image">
+                        <img src="https://unsplash.it/320/400?image=1067" alt="Eventname"/>
                     </div>
-                    <div class="colhome-inner-image">
-                        <img src="https://unsplash.it/320/260" alt="img"/>
+                    <div class="event-meta">
+                        <h2>Heidenheimer City Autoshow</h2>
+                        <h3>01. Dezember</h3>
+                        <p>Mit verkaufsoffenem Sonntag</p>
+                        <span class="event-anchor">Mehr Infos</span>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="colhome-col">
-                <div class="colhome-inner">
-                    <div class="colhome-inner-meta" data-equalizer-watch>
-                        <h2>Save the date</h2>
-                        <p>Something</p>
+            <div class="events-item">
+                <a href="#" class="event">
+                    <div class="event-image">
+                        <img src="https://unsplash.it/320/400?image=1067" alt="Eventname"/>
                     </div>
-                    <div class="colhome-inner-image">
-                        <img src="https://unsplash.it/320/260" alt="img"/>
+                    <div class="event-meta">
+                        <h2>Heidenheimer City Autoshow</h2>
+                        <h3>01. Dezember</h3>
+                        <p>Mit verkaufsoffenem Sonntag</p>
+                        <span class="event-anchor">Mehr Infos</span>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="colhome-col">
-                <div class="colhome-inner">
-                    <div class="colhome-inner-meta" data-equalizer-watch>
-                        <h2>Save the date</h2>
-                        <p>Something</p>
-                        <p>Something</p>
-                        <p>Something</p>
+            <div class="events-item">
+                <a href="#" class="event">
+                    <div class="event-image">
+                        <img src="https://unsplash.it/320/400?image=1067" alt="Eventname"/>
                     </div>
-                    <div class="colhome-inner-image">
-                        <img src="https://unsplash.it/320/260" alt="img"/>
+                    <div class="event-meta">
+                        <h2>Heidenheimer City Autoshow</h2>
+                        <h3>01. Dezember</h3>
+                        <p>Mit verkaufsoffenem Sonntag</p>
+                        <span class="event-anchor">Mehr Infos</span>
                     </div>
-                </div>
+                </a>
+            </div>
+            <div class="events-item">
+                <a href="#" class="event">
+                    <div class="event-image">
+                        <img src="https://unsplash.it/320/400?image=1067" alt="Eventname"/>
+                    </div>
+                    <div class="event-meta">
+                        <h2>Heidenheimer City Autoshow</h2>
+                        <h3>01. Dezember</h3>
+                        <p>Mit verkaufsoffenem Sonntag</p>
+                        <span class="event-anchor">Mehr Infos</span>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
