--- a/frontend/src/scss/components/common/_tabs.scss
+++ b/frontend/src/scss/components/common/_tabs.scss
@@ -43,7 +43,7 @@
   }
   &-icon {
     padding: $spacing/4 0;
-    .svg {
+    .icon {
       max-height: 26px;
       max-width: 26px;
       fill: $dark-gray;
