--- a/frontend/src/scss/sections/_common.scss
+++ b/frontend/src/scss/sections/_common.scss
@@ -4,3 +4,4 @@
 @import '../components/common/footer';
 @import '../components/common/hero';
 @import '../components/common/tabs';
+@import '../components/common/business';
