--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -18,6 +18,7 @@
     <a href="hero.html" class="button">Hero</a>
     <a href="tabs.html" class="button">Tabs</a>
     <a href="footer.html" class="button">Footer</a>
+    <a href="entry.html" class="button">Entry</a>
     <h2>Special elements</h2>
     <a href="home-columns.html" class="button">Columns Home</a>
     <a href="material-groups.html" class="button">Material groups</a>
@@ -25,6 +26,7 @@
     <a href="events.html" class="button">Event list</a>
     <h2>Layouts</h2>
     <a href="layout-example.html" class="button">Gesamt Beispiel</a>
+    <a href="layout-entries.html" class="button">Ladenübersicht</a>
 </div>
 </body>
 </html>
