--- a/frontend/src/templates/layout-example.html
+++ b/frontend/src/templates/layout-example.html
@@ -137,6 +137,57 @@
         </div>
     </div>
 </div>
+<div class="colhome">
+    <div class="container container--medium" data-equalizer data-equalize-on="medium">
+        <div class="colhome-col">
+            <div class="colhome-inner">
+                <div class="colhome-inner-meta" data-equalizer-watch>
+                    <h2>Save the date</h2>
+                    <p>Something</p>
+                </div>
+                <div class="colhome-inner-image">
+                    <img src="https://unsplash.it/320/260" alt="img"/>
+                </div>
+            </div>
+        </div>
+        <div class="colhome-col">
+            <div class="colhome-inner">
+                <div class="colhome-inner-meta" data-equalizer-watch>
+                    <h2>Save the date</h2>
+                    <p>Something</p>
+                </div>
+                <div class="colhome-inner-image">
+                    <img src="https://unsplash.it/320/260" alt="img"/>
+                </div>
+            </div>
+        </div>
+        <div class="colhome-col">
+            <div class="colhome-inner">
+                <div class="colhome-inner-meta" data-equalizer-watch>
+                    <h2>Save the date</h2>
+                    <p>Something</p>
+                    <p>Something</p>
+                    <p>Something</p>
+                </div>
+                <div class="colhome-inner-image">
+                    <img src="https://unsplash.it/320/260" alt="img"/>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer class="footer">
+    <div class="container">
+        <ul class="footer-inner">
+            <li class="footer-inner-item">
+                <a href="#">Kontakt</a>
+            </li>
+            <li class="footer-inner-item">
+                <a href="#">Impressum</a>
+            </li>
+        </ul>
+    </div>
+</footer>
 
 <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.1/js/foundation.min.js"></script>
