--- a/frontend/src/templates/tabs.html
+++ b/frontend/src/templates/tabs.html
@@ -18,8 +18,8 @@
             <div class="tabs-inner">
                 <a href="#" class="tab">
                     <div class="tab-icon">
-                        <svg class="svg">
-                            <use xlink:href="#cart"/>
+                        <svg class="icon">
+                            <use xlink:href="#einkaufen"/>
                         </svg>
                     </div>
                     <div class="tab-label">
@@ -28,8 +28,8 @@
                 </a>
                 <a href="#" class="tab tab--active">
                     <div class="tab-icon">
-                        <svg class="svg">
-                            <use xlink:href="#cart"/>
+                        <svg class="icon">
+                            <use xlink:href="#einkaufen"/>
                         </svg>
                     </div>
                     <div class="tab-label">
@@ -38,8 +38,8 @@
                 </a>
                 <a href="#" class="tab">
                     <div class="tab-icon">
-                        <svg class="svg">
-                            <use xlink:href="#cart"/>
+                        <svg class="icon">
+                            <use xlink:href="#einkaufen"/>
                         </svg>
                     </div>
                     <div class="tab-label">
@@ -48,8 +48,8 @@
                 </a>
                 <a href="#" class="tab">
                     <div class="tab-icon">
-                        <svg class="svg">
-                            <use xlink:href="#cart"/>
+                        <svg class="icon">
+                            <use xlink:href="#einkaufen"/>
                         </svg>
                     </div>
                     <div class="tab-label">
@@ -58,8 +58,8 @@
                 </a>
                 <a href="#" class="tab">
                     <div class="tab-icon">
-                        <svg class="svg">
-                            <use xlink:href="#cart"/>
+                        <svg class="icon">
+                            <use xlink:href="#einkaufen"/>
                         </svg>
                     </div>
                     <div class="tab-label">
