--- a/frontend/src/scss/components/special/_material-groups.scss
+++ b/frontend/src/scss/components/special/_material-groups.scss
@@ -32,6 +32,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   @include breakpoint(medium) {
     padding: $spacing*4 $spacing;
     transition: all .1s;
