--- a/frontend/src/templates/entry.html
+++ b/frontend/src/templates/entry.html
@@ -22,14 +22,46 @@
                 </div>
                 <div class="business-meta">
                     <h1>Conclurer GmbH</h1>
+                    <span class="business-meta-slagline">
+                        Softwareentwicklung
+                    </span>
                     <p class="business-adress">
                         Friedrichstraße 3<br>
                         <a href="https://www.conclurer.com">www.conclurer.com</a><br>
                         Mail: <a href="mailto:kontakt@conclurer.com">info@bonita.de</a>
                     </p>
-                    <div class="business-times">
-                        Geöffnet: #TODO
-                    </div>
+                    <ul class="business-social">
+                        <li class="business-social-item">
+                            <a href="#fb">
+                                <svg class="icon">
+                                    <use xlink:href="#facebook"/>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="business-times">
+                        <li class="business-times-item business-times-item--label">Geöffnet:</li>
+                        <li class="business-times-item">
+                            <div class="business-times-day">Montag</div>
+                            <div class="business-times-hours">09:30 -20:00 Uhr</div>
+                        </li>
+                        <li class="business-times-item">
+                            <div class="business-times-day">Dienstag</div>
+                            <div class="business-times-hours">09:30 -20:00 Uhr</div>
+                        </li>
+                        <li class="business-times-item">
+                            <div class="business-times-day">Mittwoch</div>
+                            <div class="business-times-hours">09:30 -20:00 Uhr</div>
+                        </li>
+                        <li class="business-times-item">
+                            <div class="business-times-day">Donnerstag</div>
+                            <div class="business-times-hours">09:30 -20:00 Uhr</div>
+                        </li>
+                        <li class="business-times-item">
+                            <div class="business-times-day">Freitag</div>
+                            <div class="business-times-hours">09:30 -20:00 Uhr</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="business-content">
@@ -41,6 +73,28 @@
                 </div>
                 <div class="business-location">
                     Location #TODO
+                </div>
+            </div>
+            <div class="business-images">
+                <div class="business-images-item">
+                    <img src="http://hdh.conclurer.com/site/assets/files/8572/pr_3304.500x300.jpg"
+                         alt="Conclurer GmbH Heidenheim"/>
+                </div>
+                <div class="business-images-item">
+                    <img src="http://hdh.conclurer.com/site/assets/files/8572/pr_3304.500x300.jpg"
+                         alt="Conclurer GmbH Heidenheim"/>
+                </div>
+                <div class="business-images-item">
+                    <img src="http://hdh.conclurer.com/site/assets/files/8572/pr_3304.500x300.jpg"
+                         alt="Conclurer GmbH Heidenheim"/>
+                </div>
+                <div class="business-images-item">
+                    <img src="http://hdh.conclurer.com/site/assets/files/8572/pr_3304.500x300.jpg"
+                         alt="Conclurer GmbH Heidenheim"/>
+                </div>
+                <div class="business-images-item">
+                    <img src="http://hdh.conclurer.com/site/assets/files/8572/pr_3304.500x300.jpg"
+                         alt="Conclurer GmbH Heidenheim"/>
                 </div>
             </div>
         </div>
