--- a/frontend/src/templates/layout-example.html
+++ b/frontend/src/templates/layout-example.html
@@ -19,18 +19,18 @@
                     HEIDENHEIM LOGO
                 </div>
                 <div class="header-toggle" data-toggle="header-search header-toggle--search" id="header-toggle--search" data-toggler=".header-toggle--active">
-                    <svg class="svg svg--icon">
+                    <svg class="icon icon--icon">
                         <use xlink:href="#search"/>
                     </svg>
-                    <svg class="svg svg--close">
+                    <svg class="icon icon--close">
                         <use xlink:href="#close"/>
                     </svg>
                 </div>
                 <div class="header-toggle" data-toggle="header-menu header-toggle--menu" id="header-toggle--menu" data-toggler=".header-toggle--active">
-                    <svg class="svg svg--icon">
+                    <svg class="icon icon--icon">
                         <use xlink:href="#menu"/>
                     </svg>
-                    <svg class="svg svg--close">
+                    <svg class="icon icon--close">
                         <use xlink:href="#close"/>
                     </svg>
                 </div>
@@ -86,7 +86,7 @@
         <div class="tabs-inner">
             <a href="#" class="tab">
                 <div class="tab-icon">
-                    <svg class="svg">
+                    <svg class="icon">
                         <use xlink:href="#cart"/>
                     </svg>
                 </div>
@@ -96,7 +96,7 @@
             </a>
             <a href="#" class="tab tab--active">
                 <div class="tab-icon">
-                    <svg class="svg">
+                    <svg class="icon">
                         <use xlink:href="#cart"/>
                     </svg>
                 </div>
@@ -106,7 +106,7 @@
             </a>
             <a href="#" class="tab">
                 <div class="tab-icon">
-                    <svg class="svg">
+                    <svg class="icon">
                         <use xlink:href="#cart"/>
                     </svg>
                 </div>
@@ -116,7 +116,7 @@
             </a>
             <a href="#" class="tab">
                 <div class="tab-icon">
-                    <svg class="svg">
+                    <svg class="icon">
                         <use xlink:href="#cart"/>
                     </svg>
                 </div>
@@ -126,7 +126,7 @@
             </a>
             <a href="#" class="tab">
                 <div class="tab-icon">
-                    <svg class="svg">
+                    <svg class="icon">
                         <use xlink:href="#cart"/>
                     </svg>
                 </div>
