--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -17,6 +17,7 @@
     <a href="header.html" class="button">Header</a>
     <a href="hero.html" class="button">Hero</a>
     <a href="tabs.html" class="button">Tabs</a>
+    <a href="tabs-abc.html" class="button">ABC</a>
     <a href="footer.html" class="button">Footer</a>
     <a href="entry.html" class="button">Entry</a>
     <h2>Special elements</h2>
