--- a/frontend/src/scss/components/common/_hero.scss
+++ b/frontend/src/scss/components/common/_hero.scss
@@ -26,6 +26,9 @@
       justify-content: flex-end;
     }
   }
+  &--white &-headline {
+    color: $white;
+  }
   &-headline {
     width: 42%;
     color: $dark-gray;
