--- a/frontend/src/scss/sections/_special.scss
+++ b/frontend/src/scss/sections/_special.scss
@@ -2,3 +2,5 @@
 @import '../components/special/material-groups';
 @import '../components/special/entries';
 @import '../components/special/events';
+@import '../components/special/page';
+@import '../components/special/magnific-popup';
