--- a/frontend/src/scss/components/special/_columns-home.scss
+++ b/frontend/src/scss/components/special/_columns-home.scss
@@ -25,7 +25,7 @@
       }
     }
     &-image {
-      max-height: 300px;
+      //max-height: 420px;
       overflow: hidden;
       img {
         width: 100%;
