--- a/frontend/src/scss/components/common/_grid.scss
+++ b/frontend/src/scss/components/common/_grid.scss
@@ -16,3 +16,9 @@
     max-width: $global-width * .55;
   }
 }
+
+.spacer {
+  @include grid-col(12);
+  padding-top:30px;
+  padding-bottom:30px;
+}
