--- a/frontend/src/templates/home-columns.html
+++ b/frontend/src/templates/home-columns.html
@@ -14,6 +14,11 @@
 <h1>Columns homepage</h1>
 <div class="example">
     <div class="colhome">
+        <div class="container container--medium">
+
+        <div class="spacer">
+            <h1>Test</h1>
+        </div>
         <div class="container container--medium" data-equalizer data-equalize-on="medium">
             <div class="colhome-col">
                 <div class="colhome-inner">
