--- a/frontend/src/templates/entries-list.html
+++ b/frontend/src/templates/entries-list.html
@@ -180,6 +180,13 @@
                     </div>
                 </a>
             </div>
+            <div class="entries-item">
+                <a href="#" class="entry entry--center" data-equalizer-watch>
+                    <div class="entry-meta">
+                        <span class="button info">Mehr Tourismus</span>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </div>
