--- a/frontend/src/templates/events.html
+++ b/frontend/src/templates/events.html
@@ -68,6 +68,9 @@
                 </a>
             </div>
         </div>
+        <div class="full full--center full--padded">
+            <a href="#" class="button">Weitere Veranstaltungen</a>
+        </div>
     </div>
 </div>
 
