--- a/frontend/src/scss/components/common/_hero.scss
+++ b/frontend/src/scss/components/common/_hero.scss
@@ -29,6 +29,9 @@
   &--white &-headline {
     color: $white;
   }
+  &--top {
+    background-position: center top !important;
+  }
   &-headline {
     width: 42%;
     color: $dark-gray;
