--- a/frontend/src/scss/base/_common.scss
+++ b/frontend/src/scss/base/_common.scss
@@ -37,3 +37,25 @@ h1 {
   max-height: 100px;
   fill: $black;
 }
+
+//Offline page
+.offline {
+  width: 100%;
+  height: 600px;
+  height: 100vh;
+  background-color: $light-gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: $z-index-clouds;
+  opacity: .9999;
+  img {
+    max-width: 130px;
+  }
+  &-inner {
+    padding: 20px 50px;
+    background-color: $white;
+    text-align: center;
+  }
+}
